[package]
name = "advent_of_code_2021"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.29.0"
pathfinding = "3.0.5"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmarks"
harness = false
